src/objects/MPOT_Change_Log__c.object
<CustomObject>
    <fields>
        <fullName>Action_Taken_By__c</fullName>
        <formula>CreatedBy.FirstName  &amp; &apos; &apos; &amp; CreatedBy.LastName</formula>
        <label>Action Taken By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline_End__c</fullName>
        <formula>Project_Milestone__r.Baseline_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Baseline_Start__c</fullName>
        <formula>Project_Milestone__r.Baseline_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Requested_by__c</fullName>
        <label>Change Requested by</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <formula>Project_Milestone__r.Milestone_detail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Change_Approved__c</fullName>
        <label>Date Change Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPOT_Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <label>Milestone Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <label>Milestone Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <formula>Project_Milestone__r.Milestone_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPOT_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_On__c</fullName>
        <label>Modified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Molecules_Impacted__c</fullName>
        <label>Previous Molecules Impacted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Network_Project_Initiated_from__c</fullName>
        <label>Previous Network Project Initiated from</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Networks_Project_Impacts__c</fullName>
        <label>Previous Networks Project Impacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_End_Date__c</fullName>
        <label>New End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Start_Date__c</fullName>
        <label>New Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Day_Btw_NewEnd_and_PrevEnd__c</fullName>
        <formula>ABS( New_End_Date__c -  Previous_End_Date__c )</formula>
        <label>Number of Day Btw NewEnd and PrevEnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Day_Btw_NewStart_and_PrevStart__c</fullName>
        <formula>ABS(New_Start_Date__c - Previous_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Day Btw NewStart and PrevStart</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platforms_Impacted__c</fullName>
        <label>Previous Drug Product/Platform Impacted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Anchor__c</fullName>
        <label>Previous Anchor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_End_Date__c</fullName>
        <label>Previous End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Regulatory_Impact_Level__c</fullName>
        <label>Previous Regulatory Impact Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Start_Date__c</fullName>
        <label>Previous Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Previous Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Driver__c</fullName>
        <label>Previous Project Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Milestone</label>
        <referenceTo>MPOT_Project_Milestone__c</referenceTo>
        <relationshipLabel>MPOT Change Logs</relationshipLabel>
        <relationshipName>MPOT_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_NRO_Comments__c</fullName>
        <label>NRO Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_NameMCL__c</fullName>
        <formula>Project_Milestone__r.Project_Name__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Previous Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project_Milestone__r.Project_Name__r.MPOT_Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Owner_Id__c</fullName>
        <label>Project Owner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <label>Previous Project Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <label>Previous Project Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <label>Previous Project Sponsor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Previous Project Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>GLBL_Project__c</referenceTo>
        <relationshipLabel>MPOT Change Logs</relationshipLabel>
        <relationshipName>MPOT_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_for_Milestone_Change_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>GLBL_Project__c</referenceTo>
        <relationshipLabel>MPOT Change Logs (Project for Milestone Change Log)</relationshipLabel>
        <relationshipName>MPOT_Change_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regulatory_Impact__c</fullName>
        <label>Previous Reg Submission &amp; Approval Req</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sites_Impacted__c</fullName>
        <label>Previous Sites Impacted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Milestone_Name__c</fullName>
        <label>Sub Milestone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Milestone__c</fullName>
        <formula>Project_Milestone__r.Sub_Milestone_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Milestone</label>
        <type>Text</type>
    </fields>
    <label>MPOT Change Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MPOT_Complete_Milestone_Change_Log</fullName>
        <columns>NAME</columns>
        <columns>Project_for_Milestone_Change_Log__c</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Sub_Milestone_Name__c</columns>
        <columns>Milestone_Status__c</columns>
        <columns>Activity__c</columns>
        <columns>New_Start_Date__c</columns>
        <columns>New_End_Date__c</columns>
        <columns>Previous_Start_Date__c</columns>
        <columns>Previous_End_Date__c</columns>
        <columns>Action_Taken_By__c</columns>
        <columns>Date__c</columns>
        <columns>Reason_for_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity__c</field>
            <operation>equals</operation>
            <value>Modify,Delete,Add</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MPOT_Change_Log__c.MPOT_Milestone_Log</value>
        </filters>
        <label>Complete Milestone Change Log</label>
        <language>en_US</language>
        <sharedTo>
            <group>MPOT_Database_Administrator</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPOT Change Logs</pluralLabel>
    <recordTypes>
        <fullName>MPOT_Milestone_Log</fullName>
        <active>true</active>
        <label>MPOT Milestone Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>MPOT_Project</fullName>
        <active>true</active>
        <label>MPOT Project</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>